# Clion-AVR

./: CMakeLists.txt  README.md  main.c
